// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders primary button 1`] = `
<button
  class="sc-AxjAm czOMqH"
/>
`;

exports[`Button renders skeleton button 1`] = `
<button
  class="sc-AxjAm bIKwNs"
/>
`;
